--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </a>
         <a href="#" class="link">
             <img src="img2.jpg" alt="">
-            <p>contact us</p>
+            <p>contact</p>
         </a>
     </div>
     <div class="wrap">
